--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -46,7 +46,7 @@ jobs:
           path: ${{ github.sha }}.zip   
 
   publish:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Create Release
         id: create_release
