--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -47,8 +47,9 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: build
+    need: build
     steps:
+      # Creation Release
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -60,10 +61,12 @@ jobs:
           body: New release for ${{ github.sha }}. Release notes can be found in docs.
           draft: false
           prerelease: false
+      # Download the artifact
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: zipped-bundle
+      # Upload Release Asset
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         env: 
