--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -47,7 +47,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    need: build
+    needs: build
     steps:
       # Creation Release
       - name: Create Release
