--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -56,7 +56,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }} # This token is provided by actions, you do not need to create your own.
         with:
-          tag_name: ${{ github.sha }}
+          tag_name: run-${{ github.run_number }}-${{ github.sha }}
           release_name: Release ${{ github.run_number}}
           body: New release for ${{ github.sha }}. Release notes can be found in docs.
           draft: false
